--- a/OIE/testes/teste_BERT.ipynb
+++ b/OIE/testes/teste_BERT.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "#-- Local measures --#\n",
-      "True Positives: {'B-ARG0': 28, 'B-ARG1': 11, 'I-ARG0': 35, 'I-V': 2, 'I-ARG1': 26, 'O': 499, 'B-V': 21}\n",
-      "False Positives: {'B-ARG0': 5, 'B-ARG1': 16, 'I-ARG0': 0, 'I-V': 0, 'I-ARG1': 28, 'O': 93, 'B-V': 5}\n",
-      "False Negatives: {'B-ARG0': 9, 'B-ARG1': 26, 'I-ARG0': 14, 'I-V': 38, 'I-ARG1': 23, 'O': 21, 'B-V': 16}\n",
+      "True Positives: {'B-ARG1': 17, 'O': 582, 'B-V': 31, 'I-ARG0': 45, 'I-V': 12, 'I-ARG1': 25, 'B-ARG0': 34}\n",
+      "False Positives: {'B-ARG1': 27, 'O': 148, 'B-V': 15, 'I-ARG0': 4, 'I-V': 7, 'I-ARG1': 73, 'B-ARG0': 9}\n",
+      "False Negatives: {'B-ARG1': 34, 'O': 85, 'B-V': 20, 'I-ARG0': 39, 'I-V': 57, 'I-ARG1': 31, 'B-ARG0': 17}\n",
       "\n",
       "#-- Global measures --#\n",
-      "Correct predictions: 622\n",
-      "Total predictions: 769\n",
-      "Accuracy: 0.8088\n"
+      "Correct predictions: 746\n",
+      "Total predictions: 1029\n",
+      "Accuracy: 0.725\n"
      ]
     }
    ],
@@ -24,7 +24,7 @@
     "import pandas as pd\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "MODEL_NAME = \"LSOIE++\"\n",
+    "MODEL_NAME = \"LSOIE++2\"\n",
     "\n",
     "\n",
     "def get_dev_result(model_name: str):\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -97,17 +97,17 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      B-ARG0     0.8485    0.7568    0.8000        37\n",
-      "      B-ARG1     0.4074    0.2973    0.3438        37\n",
-      "         B-V     0.8077    0.5676    0.6667        37\n",
-      "      I-ARG0     1.0000    0.7143    0.8333        49\n",
-      "      I-ARG1     0.4815    0.5306    0.5049        49\n",
-      "         I-V     1.0000    0.0500    0.0952        40\n",
-      "           O     0.8429    0.9596    0.8975       520\n",
+      "      B-ARG0     0.7907    0.6667    0.7234        51\n",
+      "      B-ARG1     0.3864    0.3333    0.3579        51\n",
+      "         B-V     0.6739    0.6078    0.6392        51\n",
+      "      I-ARG0     0.9184    0.5357    0.6767        84\n",
+      "      I-ARG1     0.2551    0.4464    0.3247        56\n",
+      "         I-V     0.6316    0.1739    0.2727        69\n",
+      "           O     0.7973    0.8726    0.8332       667\n",
       "\n",
-      "    accuracy                         0.8088       769\n",
-      "   macro avg     0.7697    0.5537    0.5916       769\n",
-      "weighted avg     0.8157    0.8088    0.7842       769\n",
+      "    accuracy                         0.7250      1029\n",
+      "   macro avg     0.6362    0.5195    0.5468      1029\n",
+      "weighted avg     0.7397    0.7250    0.7166      1029\n",
       "\n"
      ]
     }
