--- a/OIE/datasets/translated/development.ipynb
+++ b/OIE/datasets/translated/development.ipynb
@@ -66,9 +66,24 @@
     "        ext_list = ext.split(\" \")\n",
     "        sent_list = sent.split(\" \")\n",
     "        sent_doc = self.nlp(sent)\n",
-    "\n",
+    "        \n",
+    "        l_id = -2\n",
+    "        mid_id = 0\n",
+    "        if len(ext_list)<len(sent_list)/3:\n",
+    "            l_id = -2\n",
+    "            mid_id = 0\n",
+    "        else:\n",
+    "            l_id = 1\n",
+    "            mid_id = len(ext_list)\n",
+    "            for length in range(1, len(ext_list) - 1):\n",
+    "                for start in range(1, len(ext_list) - length):\n",
+    "                    end = start + length\n",
+    "                    rel = ext_list[start:end]\n",
+    "            \n",
+    "        \n",
     "        # permutando relações\n",
     "        # Começa com o maior tamanho de subsequência e vai diminuindo\n",
+    "                \n",
     "        for length in range(len(ext_list) - 2, 0, -1):\n",
     "            for start in range(1, len(ext_list) - length):\n",
     "                end = start + length\n",
